--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@ body {
 h1 {
     font-size: 6.854rem;
     line-height: 1rem;
+    max-width: 100%;
 }
 
 h2 {
@@ -26,7 +27,9 @@ h3 {
 
 header {
     left: 10%;
+    /* max-width: 400px; */
     position: fixed;
+    /* right: 40%;  */
     top: 20%;
 }
 
@@ -70,6 +73,21 @@ a:hover {
 }
 
 @media screen and (max-width: 930px) {
+    h1 {
+        /* font-size: 11.79vw; */
+        font-size: 2.618rem;
+    }
+
+    h2 {
+        /* font-size: 4.5vw; */
+        font-size: 1.618rem;
+    }
+
+    .fab {
+        /* font-size: 4.5vw; */
+        font-size: 1.618rem;
+    }
+
     .info {
         background-color: rgb(33,33,33);
         left: 10%;
