--- a/css/index.css
+++ b/css/index.css
@@ -83,6 +83,7 @@ header {
     position: absolute;
     top: 95vh;
     right: 25%;
+    z-index: -1;
 }
 
 .fa-chevron-down {
@@ -98,6 +99,7 @@ header {
     position: absolute;
     right: 5%;
     top: 100vh;
+    z-index: 1;
 }
 
 .info p {
