rejiggering styling, new content

--- a/css/index.css
+++ b/css/index.css
@@ -110,8 +110,9 @@ header {
 
 .picture {
     border-radius: 8px;
-    margin-left: 5%;
-    margin-top: 2rem;
+    margin-bottom: 1rem;
+    /* margin-left: 5%; */
+    margin-top: 1rem;
     width: 90%;
 }
 
@@ -123,7 +124,7 @@ a[ id= "scroll" ]:target ~ #main article.panel {
 @media screen and (max-width: 930px) {
     h1 {
         /* font-size: 11.79vw; */
-        font-size: 2.618rem;
+        font-size: 4.236rem;
     }
 
     h2 {
