--- a/css/index.css
+++ b/css/index.css
@@ -1,253 +1,262 @@
 html {
-    box-sizing: border-box;
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Ubuntu, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
 }
 
 body {
-    background-color: rgb(33,33,33);
-    color: rgb(222,222,222);
+  background-color: rgb(33, 33, 33);
+  color: rgb(222, 222, 222);
 }
 
 h1 {
-    font-size: 6.854rem;
-    line-height: 1rem;
-    max-width: 100%;
+  font-size: 6.854rem;
+  line-height: 1rem;
+  max-width: 100%;
 }
 
 .firstname {
-    animation: slide-in-blurred-top 1s .2s both;
+  animation: slide-in-blurred-top 1s 0.2s both;
 }
 
 .lastname {
-    animation: slide-in-blurred-top 1s .4s both;
+  animation: slide-in-blurred-top 1s 0.4s both;
 }
 
 h2 {
-    font-size: 2.618rem;
-    line-height: .5rem;
+  font-size: 2.618rem;
+  line-height: 0.5rem;
 }
 
 .subtitle {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .firstsub {
-    animation: slide-in-blurred-top 1s .6s both;
-    margin-top: 5px;
+  animation: slide-in-blurred-top 1s 0.6s both;
+  margin-top: 5px;
 }
 
 .secondsub {
-    animation: slide-in-blurred-top 1s .8s both;
-    margin-bottom: 5px;
+  animation: slide-in-blurred-top 1s 0.8s both;
+  margin-bottom: 5px;
 }
 
 .social--links {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 h3 {
-    font-size: 1.618rem;
-    margin-top: 0;
+  font-size: 1.618rem;
+  margin-top: 0;
 }
 
 header {
-    left: 10%;
-    position: fixed;
-    top: 20%;
+  left: 10%;
+  position: fixed;
+  top: 20%;
 }
 
 .header-image {
-    animation: slide-in-blurred-top 1s 1s both;
-    color: rgb(222,222,222);
-    font-size: 2.618rem;
-    margin-right: .75rem;
-    text-decoration: none;
-    transition: box-shadow .75s, transform .75s;
+  animation: slide-in-blurred-top 1s 1s both;
+  color: rgb(222, 222, 222);
+  font-size: 2.618rem;
+  margin-right: 0.75rem;
+  text-decoration: none;
+  transition: box-shadow 0.75s, transform 0.75s;
 }
 
 .scroll--notif {
-	animation: bounce-top 1.5s 1.5s ease-out both;
-    color: rgb(222,222,222);
-    font-size: 1.618rem;
-    position: fixed;;
-    top: 95vh;
-    right: 25%;
-    z-index: -1;
+  animation: bounce-top 1.5s 1.5s ease-out both;
+  color: rgb(222, 222, 222);
+  font-size: 1.618rem;
+  position: fixed;
+  top: 95vh;
+  right: 25%;
+  z-index: -1;
 }
 
 .fa-chevron-down {
-    color: rgb(222,222,222);
-    text-decoration: none;
+  color: rgb(222, 222, 222);
+  text-decoration: none;
 }
 
 .info {
-    background-color: rgb(33,33,33);
-    box-shadow: 0px -10px 10px rgb(33,33,33);
-    font-size: 1rem;
-    left: 55%;
-    padding-bottom: 50vh;
-    padding-top: 1rem;
-    position: absolute;
-    right: 5%;
-    top: 100vh;
-    z-index: 1;
+  background-color: rgb(33, 33, 33);
+  box-shadow: 0px -10px 10px rgb(33, 33, 33);
+  font-size: 1rem;
+  left: 55%;
+  padding-bottom: 50vh;
+  padding-top: 1rem;
+  position: absolute;
+  right: 5%;
+  top: 100vh;
+  z-index: 1;
 }
 
 .info p {
-    line-height: 1.3rem;
+  line-height: 1.3rem;
+}
+
+.info-heading {
+  line-height: 2.25rem;
 }
 
 .image {
-    border-radius: 8px;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    width: 100%;
+  border-bottom: thin solid rgb(222, 222, 222);
+  /* border-radius: 8px; */
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  padding-bottom: 2rem;
+  width: 100%;
 }
 
 .project-header {
-    margin-bottom: .2rem;
+  color: #6feae6;
+  font-size: 2rem;
+  margin-bottom: 0.2rem;
 }
 
 .project-info-link {
-    color: rgb(222,222,222);
-    text-decoration: none;
+  color: rgb(222, 222, 222);
+  text-decoration: none;
 }
 
 .skills-list {
-    align-content: flex-start;
-    align-items: flex-start;
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  align-content: flex-start;
+  align-items: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .skills-item {
-    margin: 1rem;
+  margin: 1rem;
 }
 
-a[ id= "scroll" ]:target ~ #main article.panel {
-    -webkit-transform: translateY( 0px);
-    transform: translateY( 0px );
+a[id="scroll"]:target ~ #main article.panel {
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
 }
 
 @media screen and (max-width: 930px) {
-    h1 {
-        /* font-size: 11.79vw; */
-        font-size: 4.236rem;
-    }
+  h1 {
+    /* font-size: 11.79vw; */
+    font-size: 4.236rem;
+  }
 
-    h2 {
-        /* font-size: 4.5vw; */
-        font-size: 1.618rem;
-    }
+  h2 {
+    /* font-size: 4.5vw; */
+    font-size: 1.618rem;
+  }
 
-    h3 {
-        font-size: 1.25rem;
-    }
+  h3 {
+    font-size: 1.25rem;
+  }
 
-    .header-image {
-        /* font-size: 4.5vw; */
-        font-size: 1.618rem;
-    }
+  .header-image {
+    /* font-size: 4.5vw; */
+    font-size: 1.618rem;
+  }
 
-    .info {
-        left: 5%;
-        /* width: 26rem; */
-        /* right: 30%; */
-    }
+  .info {
+    left: 5%;
+    /* width: 26rem; */
+    /* right: 30%; */
+  }
 
-    .scroll--notif {
-        left: 50%;
-        top: 80vh;
-    }
+  .scroll--notif {
+    left: 50%;
+    top: 80vh;
+  }
 }
 
 @keyframes bounce-top {
-    0% {
-        /* transform: translateY(-45px); */
-        transform: translateY(-90px);
-        animation-timing-function: ease-in;
-        opacity: 0;
-    }
-    24% {
-        opacity: 1;
-    }
-    40% {
-        /* transform: translateY(-24px); */
-        transform: translateY(-48px);
-        animation-timing-function: ease-in;
-    }
-    65% {
-        /* transform: translateY(-12px); */
-        transform: translateY(-24px);
-        animation-timing-function: ease-in;
-    }
-    82% {
-        /* transform: translateY(-6px); */
-        transform: translateY(-12px);
-        animation-timing-function: ease-in;
-    }
-    93% {
-        /* transform: translateY(-4px); */
-        transform: translateY(-8px);
-        animation-timing-function: ease-in;
-    }
-    25%,
-    55%,
-    75%,
-    87% {
-        transform: translateY(0px);
-        animation-timing-function: ease-out;
-    }
-    100% {
-        transform: translateY(0px);
-        animation-timing-function: ease-out;
-        opacity: 1;
-    }
+  0% {
+    /* transform: translateY(-45px); */
+    transform: translateY(-90px);
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  24% {
+    opacity: 1;
+  }
+  40% {
+    /* transform: translateY(-24px); */
+    transform: translateY(-48px);
+    animation-timing-function: ease-in;
+  }
+  65% {
+    /* transform: translateY(-12px); */
+    transform: translateY(-24px);
+    animation-timing-function: ease-in;
+  }
+  82% {
+    /* transform: translateY(-6px); */
+    transform: translateY(-12px);
+    animation-timing-function: ease-in;
+  }
+  93% {
+    /* transform: translateY(-4px); */
+    transform: translateY(-8px);
+    animation-timing-function: ease-in;
+  }
+  25%,
+  55%,
+  75%,
+  87% {
+    transform: translateY(0px);
+    animation-timing-function: ease-out;
+  }
+  100% {
+    transform: translateY(0px);
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
 }
 
 @-webkit-keyframes slide-in-blurred-top {
-    0% {
-        -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
-                transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
-        -webkit-transform-origin: 50% 0%;
-                transform-origin: 50% 0%;
-        -webkit-filter: blur(40px);
-                filter: blur(40px);
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: translateY(0) scaleY(1) scaleX(1);
-                transform: translateY(0) scaleY(1) scaleX(1);
-        -webkit-transform-origin: 50% 50%;
-                transform-origin: 50% 50%;
-        -webkit-filter: blur(0);
-                filter: blur(0);
-        opacity: 1;
-    }
+  0% {
+    -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-filter: blur(40px);
+    filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+    transform: translateY(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
 }
-    @keyframes slide-in-blurred-top {
-    0% {
-        -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
-                transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
-        -webkit-transform-origin: 50% 0%;
-                transform-origin: 50% 0%;
-        -webkit-filter: blur(40px);
-                filter: blur(40px);
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: translateY(0) scaleY(1) scaleX(1);
-                transform: translateY(0) scaleY(1) scaleX(1);
-        -webkit-transform-origin: 50% 50%;
-                transform-origin: 50% 50%;
-        -webkit-filter: blur(0);
-                filter: blur(0);
-        opacity: 1;
-    }
+@keyframes slide-in-blurred-top {
+  0% {
+    -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-filter: blur(40px);
+    filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+    transform: translateY(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
 }
