--- a/css/index.css
+++ b/css/index.css
@@ -117,7 +117,7 @@ header {
 }
 
 .project-header {
-  color: #6feae6;
+  color: rgb(222, 222, 222));
   font-size: 2rem;
   margin-bottom: 0.2rem;
 }
