--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,7 @@ header {
   box-shadow: 0px -10px 10px rgb(33, 33, 33);
   font-size: 1rem;
   left: 55%;
-  padding-bottom: 50vh;
+  /* padding-bottom: 50vh; */
   padding-top: 1rem;
   position: absolute;
   right: 5%;
@@ -108,17 +108,27 @@ header {
 }
 
 .image {
-  border-bottom: thin solid rgb(222, 222, 222);
-  /* border-radius: 8px; */
-  margin-bottom: 2rem;
+  /* border-bottom: thin solid rgb(222, 222, 222); */
+  /* margin-bottom: 2rem;
   margin-top: 1rem;
-  padding-bottom: 2rem;
+  padding-bottom: 2rem; */
+  margin: 2rem 0;
+  padding: 2rem 0;
   width: 100%;
 }
 
+section {
+  margin: 5rem 0;
+}
+
+.section-header {
+  margin: 3rem 0;
+  text-decoration: underline;
+}
+
 .project-header {
-  color: rgb(222, 222, 222));
-  font-size: 2rem;
+  color: rgb(222, 222, 222);
+  /* font-size: 2rem; */
   margin-bottom: 0.2rem;
 }
 
@@ -132,11 +142,12 @@ header {
   align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .skills-item {
-  margin: 1rem;
+  font-size: 4rem;
+  margin: 1rem 0.25rem;
 }
 
 a[id="scroll"]:target ~ #main article.panel {
@@ -145,29 +156,8 @@ a[id="scroll"]:target ~ #main article.panel {
 }
 
 @media screen and (max-width: 930px) {
-  h1 {
-    /* font-size: 11.79vw; */
-    font-size: 4.236rem;
-  }
-
-  h2 {
-    /* font-size: 4.5vw; */
-    font-size: 1.618rem;
-  }
-
-  h3 {
-    font-size: 1.25rem;
-  }
-
-  .header-image {
-    /* font-size: 4.5vw; */
-    font-size: 1.618rem;
-  }
-
   .info {
     left: 5%;
-    /* width: 26rem; */
-    /* right: 30%; */
   }
 
   .scroll--notif {
